# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = nbrr/_version.py
versionfile_build = nbrr/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    versioneer.py ALL
    nbrr/_version.py ALL
    tests/repo/notebook.py ALL

[metadata]
description-file = README.md
license_file = LICENSE.txt
